# daily-practice-report

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Usage.md  docker-compose.yml  pyproject.toml  pytest.ini
.agent/workflows/: spectra-propose.md
docs/: architecture.md  configuration.md  extensions.md  getting-started.md  migrations.md
docs/user-guide/: admin-setup.md  student-workflow.md  teacher-workflow.md
scripts/: docker-entrypoint.sh  migrate.py
scripts/migrations/: 20260317_001_initial_indexes.py  20260319_002_manage_class_rename.py  role_to_permissions.py  (+3 more)
src/: main.py
tests/: test_admin_pages.py  test_admin_permissions.py  test_admin_system.py  test_admin_users.py  test_attendance_management.py  test_auth.py  test_badges.py  test_bug_fixes.py  test_checkin.py  test_checkin_config_page.py  test_class_hub_page.py  test_class_hub_stats.py  test_class_permissions.py  test_classes.py  test_cross_class_feed_attendance.py  test_cross_class_gamification.py  test_cross_class_leaderboard.py  test_cross_class_submissions.py  test_cross_class_templates.py  test_csrf.py  test_dashboard_and_page_bugs.py  test_database.py  test_dc_template.py  test_discord_integration.py  test_extensions.py  test_feed.py  test_gravatar_filter.py  test_identity_tags.py  test_join_requests.py  test_leaderboard.py  test_migration.py  test_module_structure.py  test_page_context.py  test_pages.py  test_points.py  test_prizes.py  test_rate_limiting.py  test_redis_shared.py  test_resubmission.py  test_secure_cookie.py  (+14 more)
(+339 files in other folders)
