[project]
name = "dprs"
version = "0.5.0"
description = "Daily Practice Report System — 教學場域每日練習報告管理平台"
readme = "README.md"
license = { text = "ECL-2.0" }
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "cryptography>=46.0.5",
    "fastapi-webpage",
    "fastapi[standard]",
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.35",
    "motor>=3.7.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-sugar>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "fakeredis>=2.0.0",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
fastapi-webpage = { git = "https://github.com/cxphoenix/fastapi-webpage.git" }
